--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                     <a class="keyword" href="mailto:jenny26854@gmail.com" target="_blank">jenny26854@gmail.com</a>
                 </div>
             </div>
-            <div class="general">
+            <!--<div class="general">
                 <div class="title">
                     Profile
                 </div>
@@ -309,23 +309,71 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <div class="general">
                 <div class="title">
                     Employment history
                 </div>
                 <div class="content">
-                    <div class="subcontent">
+                   <div class="subcontent">
                         <div class="subtitle">
-                            Customer Service Executive at Cytron Technologies Sdn Bhd, Penang, Malaysia
+                            Customer Service Executive at Toshiba Logistics Sdn Bhd, Penang, Malaysia
                             <div class="date">
-                                March 2015 - Present
+                                December 2018 - June 2019
                             </div>
                         </div>
                         <ul>
                             <li>
-                                Currently working as
-                                <span class="keyword">customer service executive</span> as primary role, with secondary
+                                <span class="keyword">Customer service executive</span> as primary role, with secondary
+                                role <span class="keyword">warehouse executive</span>.
+                            </li>
+                            <li>
+                                <span class="keyword">Answer calls professionally</span> to provide information about
+                                products and
+                                services, <span class="keyword">take/
+                                    cancel orders</span>, and <span class="keyword">obtain details of complaints</span>.
+                            </li>
+                            <li>
+                                <span class="keyword">Keep records of customer interactions and transactions</span>.
+                            </li>
+                            <li>
+                                <span class="keyword">Recording
+                                    details of inquiries and
+                                    complaints</span> from customers and
+                                <span class="keyword">follow up</span> to ensure that appropriate actions were taken.
+                            </li>
+                            <li>
+                                <span class="keyword">Refer customer special requests</span> to designated departments
+                                for
+                                further investigation.
+                            </li>
+                            <li>
+                                <span class="keyword">Manage and coach the warehouse team</span> to ensure smooth daily
+                                activities in receiving, storage, retrieval, picks, delivery and distribution.
+                            </li>
+                            <li>
+                                <span class="keyword">Manage courier services</span> to ensure goods are delivered to
+                                customers on a
+                                timely basis.
+                            </li>
+                            <li>
+                                <span class="keyword">Plan stock layout and space management.</span>
+                            </li>
+                            <li>
+                                <span class="keyword">Responsible for stock count</span>.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="subcontent">
+                        <div class="subtitle">
+                            Customer Service Executive at Cytron Technologies Sdn Bhd, Penang, Malaysia
+                            <div class="date">
+                                March 2015 - December 2018
+                            </div>
+                        </div>
+                        <ul>
+                            <li>
+                                <span class="keyword">Customer service executive</span> as primary role, with secondary
                                 role <span class="keyword">warehouse executive</span>.
                             </li>
                             <li>
