--- a/index.html
+++ b/index.html
@@ -317,15 +317,14 @@
                 <div class="content">
                    <div class="subcontent">
                         <div class="subtitle">
-                            Customer Service Executive at Toshiba Logistics Sdn Bhd, Penang, Malaysia
+                            Warehouse Clerk at Toshiba Logistics Sdn Bhd, Penang, Malaysia
                             <div class="date">
                                 December 2018 - June 2019
                             </div>
                         </div>
                         <ul>
                             <li>
-                                <span class="keyword">Customer service executive</span> as primary role, with secondary
-                                role <span class="keyword">warehouse executive</span>.
+                                <span class="keyword">Warehouse Clerk</span></span>.
                             </li>
                             <li>
                                 <span class="keyword">Answer calls professionally</span> to provide information about
@@ -343,18 +342,8 @@
                                 <span class="keyword">follow up</span> to ensure that appropriate actions were taken.
                             </li>
                             <li>
-                                <span class="keyword">Refer customer special requests</span> to designated departments
-                                for
-                                further investigation.
-                            </li>
-                            <li>
                                 <span class="keyword">Manage and coach the warehouse team</span> to ensure smooth daily
                                 activities in receiving, storage, retrieval, picks, delivery and distribution.
-                            </li>
-                            <li>
-                                <span class="keyword">Manage courier services</span> to ensure goods are delivered to
-                                customers on a
-                                timely basis.
                             </li>
                             <li>
                                 <span class="keyword">Plan stock layout and space management.</span>
