--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
                     Job Scope
                 </div>
                 <ul class="bullets">
+                    <li>Planner</li>
                     <li>Customer Service Executive</li>
                     <li>Warehouse Senior Executive</li>
                     <li>Sales Clerk</li>
@@ -315,6 +316,42 @@
                     Employment history
                 </div>
                 <div class="content">
+                   <div class="subcontent">
+                        <div class="subtitle">
+                            Planner at Nicepack Industries Sdn Bhd, Penang, Malaysia
+                            <div class="date">
+                                July 2019 - Present
+                            </div>
+                        </div>
+                        <ul>
+                            <li>
+                                <span class="keyword">Plan and manage the flow of product manufacturing</span> according to product delivery date.
+                            </li>
+                            <li>
+                                <span class="keyword">Plan and manage logistics for product delivery.</span>
+                            </li>
+                            <li>
+                                <span class="keyword">Construct strategies, solutions or backup plans</span> for emergency issues.
+                            </li>
+                            <li>
+                                <span class="keyword">Follow up with supervisor at production department regarding the product manufacturing status</span> to ensure the product can be delivered on time.
+                            </li>
+                            <li>
+                                <span class="keyword">Occasionally provide customer service.</span> Answer calls from customers professionally to provide information about
+                                products and
+                                services, take/cancel orders, and obtain details of complaints.
+                            </li>
+                            <li>
+                               <span class="keyword">Validate all job orders</span>, make sure they are processed correctly before passed to production for manufacturing process.
+                            </li>
+                            <li>
+                               <span class="keyword">Machine checking and validation</span>, work with supervisor to make sure machines are calibrated before manufacturing process starts.
+                            </li>
+                            <li>
+                                Temporarily <span class="keyword">works as supervisor</span> at production department when supervisor is absent.
+                            </li>
+                        </ul>
+                    </div>
                    <div class="subcontent">
                         <div class="subtitle">
                             Warehouse Clerk at Toshiba Logistics Sdn Bhd, Penang, Malaysia
